# cmake-scratch

./: README.md
01-executable/: .tasks  CMakeLists.txt  main.cpp  utils.cpp
02-nmake/: CMakeLists.txt  main.cpp
