cmake_minimum_required(VERSION 3.5)

project(demo)

set(CMAKE_VERBOSE_MAKEFILE ON)

#----------------------------------------------------------------------
# source list
#----------------------------------------------------------------------
set(SRCS
	main.cpp
	utils.cpp
	)


#----------------------------------------------------------------------
# 
#----------------------------------------------------------------------
add_executable(demo ${SRCS})



